fixed scrollbar

--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,8 @@
 /* global */
+html {
+    overflow-y: auto;
+}
+
 .footer-style {
     padding-top: 8px;
     padding-bottom: 8px;
